Add an endpoint to get the another user by username
